fixed javascritp to listen to close button being pushed to close modal. and made HIGH contrast to make button visual

--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -46,15 +46,22 @@ p{
     height: 100%;
     background-color: rgba(0,0,0,.6);
     z-index: 10;
+    margin: 0 auto;
 }
 #modal img {
-    margin: 16vh auto;
-    width: 80%;
-    height: 100%;
+    margin: 20vh auto;
+    width: 90%;
+    max-height: 100%;
 }
-.closeViwer{
+#close{
     position: absolute;
-    top:16vh
+    right: 5vh;
+    top:16vh;
+    width: 50px;
+    height: 50px;
+    z-index: 11;
+    background-color: chartreuse;
+    color: red;
 }
 #gallery{
     max-width: 100%;
